--- a/css/index.html
+++ b/css/index.html
@@ -7,19 +7,22 @@
 	
 </head>
 <body>
-<div class="navigationbar">
-	<div class="leftofmenulogo">
-		<img id="logo" src="https://photos-2.dropbox.com/t/2/AADo_SMzPwDCH_yrwPyLDlH6Q6ZlHvPQCPSzrU0RaXsicg/12/357404183/png/32x32/1/1436385600/0/2/karma-logo%20copy.svg/CJectqoBIAEgAiADIAQgBSAGIAcoAg/ApCBI2MirMx-npJsq4rP3igfxVVHYaFbP-VJ8De9ujI?size=800x600&size_mode=2" />
+	<nav class="top-navigation">
+	<div class="content">
+		<img class="logo" src="images/karma-logo copy.svg" alt="Karma" width="26px">
+	</div>
+	</nav>
+		
 		
 	
-	<div class="horizontalmenu">
-		<ul style="list-style: none;">
-			<li class="list">Meet Karma</li>
-			<li class="list">How It Works</li>
-			<li class="list">Store</li>
-			<li class="list">Blog</li>
-			<li class="list">Help</li>
-			<li class="list">Login</li>
+	
+		<ul class="links">
+			<li>Meet Karma</li>
+			<li>How It Works</li>
+			<li>Store</li>
+			<li>Blog</li>
+			<li>Help</li>
+			<li>Login</li>
 			</ul>
 		</div>
 	</div>
