--- a/css/index.html
+++ b/css/index.html
@@ -4,29 +4,31 @@
 	<meta charset="UTF-8">
 	<title>Document</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<link href='http://fonts.googleapis.com/css?family=Roboto:400,500,300' rel='stylesheet' type='text/css'>
 	
 </head>
 <body>
 	<nav class="top-navigation">
 	<div class="content">
-		<img class="logo" src="images/karma-logo copy.svg" alt="Karma" width="26px">
-	</div>
-	</nav>
-		
-		
-	
-	
-		<ul class="links">
-			<li>Meet Karma</li>
+		<ul class="links" style="list-style-type:none";>
+			<li class="active">Meet Karma</li>
 			<li>How It Works</li>
 			<li>Store</li>
 			<li>Blog</li>
 			<li>Help</li>
 			<li>Login</li>
 			</ul>
-		</div>
+			<img class="logo" src="images/karma-logo copy.svg" alt="Karma" width="26px" height="70px">
 	</div>
-</div>
+	</nav>
+		
+		
+	
+	
+		
+		
+	
+
 	
 </body>
 </html>
