--- a/css/index.html
+++ b/css/index.html
@@ -21,6 +21,21 @@
 			<img class="logo" src="images/karma-logo copy.svg" alt="Karma" width="26px" height="70px">
 	</div>
 	</nav>
+<div class="body">
+	<h1 class="text">Introducing Karma</h1>
+	<h3 class="detailtext">Bring WiFi with you everywhere you go.</h3>
+	
+	
+	<button class="big-button">Learn More</button>
+	</div>
+
+	
+
+
+
+
+
+</div>
 		
 		
 	
