--- a/css/index.html
+++ b/css/index.html
@@ -18,7 +18,7 @@
 			<li>Help</li>
 			<li>Login</li>
 			</ul>
-			<img class="logo" src="images/karma-logo copy.svg" alt="Karma" width="26px" height="70px">
+			<img class="logo" src="images/karma-logo_copy.svg" alt="Karma" width="26px" height="70px">
 	</div>
 	</nav>
 <div class="body">
@@ -29,21 +29,23 @@
 	<button class="big-button">Learn More</button>
 	</div>
 
+	<div class="cases">
+	<h2>Everyone needs a little Karma.</h2>
+
+	<div class="page-wrap">
 	
 
-
-
-
-
+	<figure>
+	<img width="127px" height="127px" src="images/icon-devices_copy.svg"/>
+	<figcaption class="devices">Internet for all devices</figcaption>
+	</figure><figure>
+	<img width="127px" height="127px" src="images/icon-coffee_copy.svg"/>
+	<figcaption class="coffee">Boost your productivity</figcaption>
+	</figure><figure>
+	<img width="127px" height="127px" src="images/icon-refill_copy.svg"/>
+	<figcaption class="refill">Pay as you go</figcaption>
+	</figure>
+	</div>	
 </div>
-		
-		
-	
-	
-		
-		
-	
-
-	
 </body>
 </html>
