--- a/css/index.html
+++ b/css/index.html
@@ -5,6 +5,10 @@
 	<title>Document</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link href='http://fonts.googleapis.com/css?family=Roboto:400,500,300' rel='stylesheet' type='text/css'>
+	<link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+	<!-- <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet"> -->
+	<link href="css/font-awesome.min.css" rel="stylesheet">
+
 	
 </head>
 <body>
@@ -47,5 +51,17 @@
 	</figure>
 	</div>	
 </div>
+<footer class="social">
+<hr />
+<h5>Join us on</h5>
+<div class="content">
+<ul class="icons">
+	<li><button class="button"><i class="fa fa-twitter" style="color: #5B85FF;"></i></button></li>
+	<li><button class="button"><i class="fa fa-facebook" style="color: #3954a1;"></i></button></li>
+	<li><button class="button"><i class="fa fa-instagram" style="color: #3954a1;"></i></button></li>
+	</ul>
+	<h6>&copy;Karma Mobility, Inc.</h6>
+</div>
+</footer>
 </body>
 </html>
